--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.gongmingqm10.training" >
+    package="net.gongmingqm10.training">
 
     <application
-        android:allowBackup="true"
         android:name=".TrainingApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name">
@@ -20,9 +20,15 @@
         <activity
             android:name=".activity.ActionTabActivity"
             android:label="@string/title_activity_action_button"
-            android:uiOptions="splitActionBarWhenNarrow"
-            android:parentActivityName=".activity.MainActivity">
-        </activity>
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.FragmentDynamicActivity"
+            android:label="@string/title_activity_fragment_sample"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.FragmentCommunicateActivity"
+            android:label="@string/title_activity_fragment_communicate"
+            android:parentActivityName=".activity.MainActivity" />
     </application>
 
 </manifest>
