--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.gongmingqm10.training">
+    package="net.gongmingqm10.training" >
 
     <application
         android:name=".TrainingApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,6 +28,10 @@
         <activity
             android:name=".activity.FragmentCommunicateActivity"
             android:label="@string/title_activity_fragment_communicate"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.InteractAppActivity"
+            android:label="@string/title_activity_interact_app"
             android:parentActivityName=".activity.MainActivity" />
     </application>
 
