--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.gongmingqm10.training" >
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".TrainingApp"
@@ -15,8 +16,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,6 +70,11 @@
             android:name=".activity.CapturePhotoActivity"
             android:label="@string/title_activity_capture_photo"
             android:parentActivityName=".activity.MainActivity" >
+        </activity>
+        <activity
+            android:name=".activity.MaterialRecyclerActivity"
+            android:parentActivityName=".activity.MainActivity"
+            android:label="@string/title_activity_material_design" >
         </activity>
     </application>
 
