--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,8 +73,12 @@
         </activity>
         <activity
             android:name=".activity.MaterialRecyclerActivity"
-            android:parentActivityName=".activity.MainActivity"
-            android:label="@string/title_activity_material_design" >
+            android:label="@string/title_activity_material_recycler"
+            android:parentActivityName=".activity.MainActivity" >
+        </activity>
+        <activity
+            android:name=".activity.MaterialCardActivity"
+            android:label="@string/title_activity_material_card" >
         </activity>
     </application>
 
