Add material card view and dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,11 @@
             android:label="@string/title_activity_material_tab"
             android:parentActivityName=".activity.MainActivity" >
         </activity>
+        <activity
+            android:name=".activity.MaterialDialogActivity"
+            android:label="@string/title_activity_material_dialog"
+            android:parentActivityName=".activity.MainActivity" >
+        </activity>
     </application>
 
 </manifest>
