--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:gridlayout-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
+    //Optional for design support libraries
     compile 'com.android.support:design:22.2.0'
+    //Optional for RecyclerView
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    //Optional for GridLayout
+    compile 'com.android.support:gridlayout-v7:22.2.0'
+    //Optional for CardView
+    compile 'com.android.support:cardview-v7:22.2.0'
 
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.google.guava:guava:18.0'
